--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
             position: absolute;
             font-size: 2rem;
             opacity: 0;
-            animation: fly 2s ease-out forwards;
+            animation: fly 2s ease-out infinite;
         }
 
         @keyframes fly {
